test/expected/explain_o_eq_rck_v=default.out
struct S; explain void operator=(S const&) = default
            ^
13: error: "default" can be used only for special member functions and relational operators
